# VIPSS_M

./: .gitignore  CMakeLists.txt  README.md  config.yaml  main.cpp  main0.cpp  test.cpp  vipss_proj.sln
data/output/: out_mesh6_0.ply  out_mesh6_1.ply  out_mesh6_10.ply  out_mesh6_5.ply
data/test/: contour_ptnormal_4.ply  contour_ptnormal_6.ply  gradients_tangent_4.ply  gradients_tangent_6.ply  test.ply  test0.ply  test_icosphere.ply  torus.ply
src/: ImgProcessor.cpp  ImgProcessor.hpp  normal_perturbation.py
tools/: file_io.py  img_stacks_processor.py  mesh_slicer.py  normal_compare.py  normal_perturbation.py  plot.py  util.py
vipss_src/: Octree.hpp  Solver.cpp  Solver.h  normal_opt.cpp  normal_opt.h  rbf_Hermite.cpp  rbf_energy.cpp  rbf_energy.h  rbf_energy_para.cpp  rbf_energy_para.h  rbf_interface.cpp  rbf_octree.cpp  rbf_octree.h  rbfcore.cpp  rbfcore.h  readers.cpp  readers.h  sample.cpp  sample.h  utility.h  vipss_m.srctrlprj
vipss_src/surfacer/: ImplicitedSurfacing.cpp  ImplicitedSurfacing.h  WINSystemDefines.H  polygonizer.cpp
vipss_src/surfacer/utils/: Rn_Affine3.H
